Bug 336793 - kscreenlocker_greet restored
Summary: kscreenlocker_greet restored
Status: RESOLVED FIXED
Alias: None
Product: ksmserver
Classification: Unmaintained
Component: ui (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Flöser
URL: https://git.reviewboard.kde.org/r/118...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-27 13:51 UTC by Harald Sitter
Modified: 2014-07-01 15:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2014-06-27 13:51:10 UTC
when locking the session and then choosing to shut down from the lock screen ksmserver will restore kscreenlocker_greet upon next login (i.e. after login the session will be blocked by the lock screen)

Reproducible: Always

Steps to Reproduce:
1. lock session
2. shutdown from lock screen
3. boot again
4. login
Actual Results:  
lock screen is still present and can be killed manually or unlocked by typing in the password again

Expected Results:  
lock screen should not be restored in session restore
Comment 1 Martin Flöser 2014-06-27 15:27:03 UTC
review request https://git.reviewboard.kde.org/r/118978/
Comment 2 Martin Flöser 2014-07-01 15:53:48 UTC
Git commit c9b0480069e650626a7daf597a7e9879f60397b7 by Martin Gräßlin.
Committed on 27/06/2014 at 15:28.
Pushed by graesslin into branch 'master'.

[screenlocker/greeter] Disable session management in the greeter

We don't want to have the greeter being restored on session startup if
one shut down the system from the lock screen.
REVIEW: 118978

M  +8    -0    ksmserver/screenlocker/greeter/main.cpp

http://commits.kde.org/plasma-workspace/c9b0480069e650626a7daf597a7e9879f60397b7