[screenlocker/greeter] Disable session management in the greeter

We don't want to have the greeter being restored on session startup if
one shut down the system from the lock screen.

BUG: 336793
REVIEW: 118978